--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
 		background-color: hsl(47, 88%, 63%);
 		max-width: 1440px;
-		min-height: 800px;
+		height: 100vh;
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
