Added hover and translations

--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,21 @@ body {
 		border-radius: 15px;
 		border: 1px solid black;
 		box-shadow: 10px 10px black;
+		transition: all .5s ease-in-out;
+}
+
+.card:hover {
+		box-shadow: 1rem 1rem 0 black;
+		cursor: pointer;
+	}
+	
+.card:hover h1 {
+	font-weight: 1000;
+	font-style: normal;
+	color: hsl(47, 88%, 63%);
+	box-shadow: 10 10 10 10;
+	transition: all .25s ease-in-out;
+	}
 }
 
 .flexColumnLeft {
