--- a/styles.css
+++ b/styles.css
@@ -7,12 +7,13 @@ body {
 		justify-content: center;
 		align-items: center;
 		margin: auto;
+		gap: 1rem;
 }
 	
 .attribution { font-size: 11px; text-align: center; padding: 10px; }
 .attribution a { color: hsl(228, 45%, 44%); }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 100px) {
   body {
 
   }
@@ -20,8 +21,9 @@ body {
 
 .card {
 		background-color: white;
-		height: 400px;
+		min-height: 400px;
 		width: 300px;
+		max-width: 90%;
 		border-radius: 15px;
 		border: 1px solid black;
 		box-shadow: 10px 10px black;
